--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <div class="section-title">Exchange Rates to PKR</div>
       <div class="exchange-rates">
         <label for="rateAED">1 AED = </label>
-        <input type="number" id="rateAED" value="80" min="0" step="0.01"> PKR<br>
+        <input type="number" id="rateAED" min="0" step="0.01" placeholder="AED to PKR"> PKR<br>
         <label for="rateUSD">1 USD = </label>
-        <input type="number" id="rateUSD" value="284" min="0" step="0.01"> PKR<br>
+        <input type="number" id="rateUSD" min="0" step="0.01" placeholder="USD to PKR"> PKR<br>
         <label for="rateGBP">1 GBP = </label>
-        <input type="number" id="rateGBP" value="379" min="0" step="0.01"> PKR
+        <input type="number" id="rateGBP" min="0" step="0.01" placeholder="GBP to PKR"> PKR
       </div>
 
       <div class="section-title">Item Weight</div>
@@ -93,7 +93,7 @@
       <div class="section-title">Shipping Rate per Kg</div>
       <div class="shipping-rates">
         <label for="seaRate">Sea Rate:</label>
-        <input type="number" id="seaRate" value="10" min="0" step="0.01">
+        <input type="number" id="seaRate" min="0" step="0.01" placeholder="Sea Rate">
         <select id="seaRateCurrency">
           <option value="PKR">PKR</option>
           <option value="AED">AED</option>
@@ -101,7 +101,7 @@
           <option value="GBP">GBP</option>
         </select><br>
         <label for="airRate">Air Rate:</label>
-        <input type="number" id="airRate" value="100" min="0" step="0.01">
+        <input type="number" id="airRate" min="0" step="0.01" placeholder="Air Rate">
         <select id="airRateCurrency">
           <option value="PKR">PKR</option>
           <option value="AED">AED</option>
@@ -115,6 +115,26 @@
     <div class="result" id="result"></div>
   </div>
   <script>
+    // Helper to get from localStorage or return empty string
+    function getSavedValue(key) {
+      let val = localStorage.getItem(key);
+      return val !== null ? val : '';
+    }
+
+    // Restore inputs on page load
+    window.addEventListener('DOMContentLoaded', function() {
+      // Exchange rates
+      document.getElementById('rateAED').value = getSavedValue('rateAED');
+      document.getElementById('rateUSD').value = getSavedValue('rateUSD');
+      document.getElementById('rateGBP').value = getSavedValue('rateGBP');
+
+      // Shipping rates and currencies
+      document.getElementById('seaRate').value = getSavedValue('seaRate');
+      document.getElementById('seaRateCurrency').value = getSavedValue('seaRateCurrency') || "PKR";
+      document.getElementById('airRate').value = getSavedValue('airRate');
+      document.getElementById('airRateCurrency').value = getSavedValue('airRateCurrency') || "PKR";
+    });
+
     function getExchangeRate(currency, rates) {
       switch (currency) {
         case "AED": return rates.AED;
@@ -146,6 +166,15 @@
       const seaRateCurrency = document.getElementById('seaRateCurrency').value;
       const airRate = parseFloat(document.getElementById('airRate').value);
       const airRateCurrency = document.getElementById('airRateCurrency').value;
+
+      // Save exchange & shipping rates and currencies to localStorage
+      localStorage.setItem('rateAED', document.getElementById('rateAED').value);
+      localStorage.setItem('rateUSD', document.getElementById('rateUSD').value);
+      localStorage.setItem('rateGBP', document.getElementById('rateGBP').value);
+      localStorage.setItem('seaRate', document.getElementById('seaRate').value);
+      localStorage.setItem('seaRateCurrency', seaRateCurrency);
+      localStorage.setItem('airRate', document.getElementById('airRate').value);
+      localStorage.setItem('airRateCurrency', airRateCurrency);
 
       // Validate inputs
       if (
