--- a/business-calculator_Version16_Version2.html
+++ b/business-calculator_Version16_Version2.html
@@ -1,1 +1,306 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>TBC Calculator - Multi-Currency</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <style>
+    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px 0; margin: 0; }
+    .container { background: #fff; padding: 24px 18px; border-radius: 10px; max-width: 490px; margin: 30px auto; box-shadow: 0 2px 8px #ddd; }
+    h1 { margin-top: 0; font-size: 2rem; letter-spacing: 1px; text-align: center;}
+    .section-title { font-weight: bold; margin-bottom: 6px; margin-top: 18px; }
+    .currency-select-row { display: flex; align-items: center; gap: 12px; margin-bottom: 16px; }
+    .currency-select-row label { font-size: 1.15rem; }
+    select, input[type="number"] { padding: 8px; margin-bottom: 16px; border-radius: 6px; border: 1px solid #d0d0d0; }
+    select { min-width: 80px; }
+    input[type="number"] { width: 100%; box-sizing: border-box;}
+    .shipping-options { margin-bottom: 16px; }
+    .shipping-options label { display: inline-block; margin-right: 20px; }
+    .shipping-rates { background: #f4faff; border-radius: 6px; padding: 10px 16px; margin-bottom: 20px;}
+    .shipping-rates label { display: inline-block; width: 130px; margin-bottom: 5px;}
+    .shipping-rates input, .shipping-rates select { width: 90px; display: inline-block;}
+    button { padding: 10px 20px; font-size: 16px; }
+    .result { margin-top: 24px; font-size: 18px; min-height: 40px;}
+    .final-price-box {
+      background: #e8ffe8;
+      border: 2px solid #34a853;
+      color: #228b22;
+      border-radius: 8px;
+      font-size: 1.4em;
+      font-weight: bold;
+      margin: 16px 0 12px 0;
+      padding: 16px 0;
+      text-align: center;
+      box-shadow: 0 2px 8px #bde5bd;
+    }
+    @media (max-width: 600px) {
+      .container { padding: 10px 2px; max-width: 100%; }
+      h1 { font-size: 1.2rem; }
+      .shipping-rates label { width: 70px; }
+      .shipping-rates input, .shipping-rates select { width: 70px; }
+      .final-price-box { font-size: 1.02em; padding: 10px 0; }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>TBC Calculator</h1>
+    <div class="currency-select-row">
+      <label for="currencySelect">Country:</label>
+      <select id="currencySelect">
+        <option value="uae">🇦🇪 UAE (AED)</option>
+        <option value="uk">🇬🇧 UK (GBP)</option>
+        <option value="usa">🇺🇸 USA (USD)</option>
+      </select>
+    </div>
+    <form id="calcForm">
+      <div class="section-title" id="costLabel">Item Cost (AED)</div>
+      <input type="number" id="cost" required min="0" step="0.01" placeholder="Item Cost">
 
+      <div class="section-title">Profit Margin <span style="font-weight:normal;">(%)</span></div>
+      <input type="number" id="profit" required min="0" step="0.01" placeholder="Profit Margin (%)">
+
+      <div class="section-title" id="rateLabel">Exchange Rate</div>
+      <div id="rateField">
+        <label for="rateAED" class="rate-label">1 AED = </label>
+        <input type="number" id="rateAED" min="0" step="0.01" placeholder="AED to PKR"> PKR
+      </div>
+      <div id="rateFieldGBP" style="display:none;">
+        <label for="rateGBP" class="rate-label">1 GBP = </label>
+        <input type="number" id="rateGBP" min="0" step="0.01" placeholder="GBP to PKR"> PKR
+      </div>
+      <div id="rateFieldUSD" style="display:none;">
+        <label for="rateUSD" class="rate-label">1 USD = </label>
+        <input type="number" id="rateUSD" min="0" step="0.01" placeholder="USD to PKR"> PKR
+      </div>
+
+      <div class="section-title">Item Weight (grams)</div>
+      <input type="number" id="weight" required min="0" step="0.01" placeholder="Item Weight (grams)">
+
+      <div class="section-title">Type of Shipping</div>
+      <div class="shipping-options">
+        <label>
+          <input type="radio" name="shipping" value="sea"> Sea Shipping
+        </label>
+        <label>
+          <input type="radio" name="shipping" value="air" checked> Air Shipping
+        </label>
+      </div>
+
+      <div class="section-title">Shipping Rate per kg</div>
+      <div class="shipping-rates">
+        <label for="seaRate">Sea Rate:</label>
+        <input type="number" id="seaRate" min="0" step="0.01" placeholder="Sea Rate">
+        <select id="seaRateCurrency">
+          <option value="PKR">PKR</option>
+          <option value="AED">AED</option>
+          <option value="GBP">GBP</option>
+          <option value="USD">USD</option>
+        </select>
+        <span>per kg</span><br>
+        <label for="airRate">Air Rate:</label>
+        <input type="number" id="airRate" min="0" step="0.01" placeholder="Air Rate">
+        <select id="airRateCurrency">
+          <option value="PKR">PKR</option>
+          <option value="AED">AED</option>
+          <option value="GBP">GBP</option>
+          <option value="USD">USD</option>
+        </select>
+        <span>per kg</span>
+      </div>
+
+      <button type="submit">Calculate Total Price</button>
+    </form>
+    <div class="result" id="result"></div>
+  </div>
+  <script>
+    // Helper for different currency keys in localStorage
+    function currencyKey(suffix) {
+      const curr = document.getElementById('currencySelect').value;
+      return curr + "_" + suffix;
+    }
+
+    // On currency change, update fields and restore last values
+    function updateCurrencyUI() {
+      const curr = document.getElementById('currencySelect').value;
+      // Hide all rate fields, show the one needed
+      document.getElementById('rateField').style.display = (curr === 'uae') ? "block" : "none";
+      document.getElementById('rateFieldGBP').style.display = (curr === 'uk') ? "block" : "none";
+      document.getElementById('rateFieldUSD').style.display = (curr === 'usa') ? "block" : "none";
+      // Update cost label
+      let currencyName = curr === 'uae' ? 'AED' : curr === 'uk' ? 'GBP' : 'USD';
+      document.getElementById('costLabel').innerText = `Item Cost (${currencyName})`;
+      // Update rate label
+      document.getElementById('rateLabel').innerText =
+        (curr === 'uae' ? "Exchange Rate (AED to PKR)"
+         : curr === 'uk' ? "Exchange Rate (GBP to PKR)"
+         : "Exchange Rate (USD to PKR)");
+      // Restore values for that currency
+      restoreInputs();
+    }
+
+    // Restore last-saved inputs for the selected currency
+    function restoreInputs() {
+      const curr = document.getElementById('currencySelect').value;
+      document.getElementById('cost').value = localStorage.getItem(currencyKey('cost')) || '';
+      document.getElementById('profit').value = localStorage.getItem(currencyKey('profit')) || '';
+      document.getElementById('weight').value = localStorage.getItem(currencyKey('weight')) || '';
+      // Rate input
+      document.getElementById('rateAED').value = (curr === 'uae') ? (localStorage.getItem(currencyKey('rate')) || '') : '';
+      document.getElementById('rateGBP').value = (curr === 'uk') ? (localStorage.getItem(currencyKey('rate')) || '') : '';
+      document.getElementById('rateUSD').value = (curr === 'usa') ? (localStorage.getItem(currencyKey('rate')) || '') : '';
+      // Shipping rates
+      document.getElementById('seaRate').value = localStorage.getItem(currencyKey('seaRate')) || '';
+      document.getElementById('seaRateCurrency').value = localStorage.getItem(currencyKey('seaRateCurrency')) || "PKR";
+      document.getElementById('airRate').value = localStorage.getItem(currencyKey('airRate')) || '';
+      document.getElementById('airRateCurrency').value = localStorage.getItem(currencyKey('airRateCurrency')) || "PKR";
+      // Shipping type
+      let shipping = localStorage.getItem(currencyKey('shipping'));
+      document.querySelectorAll('input[name="shipping"]').forEach(e => {
+        if (shipping) e.checked = (e.value === shipping);
+        else e.checked = (e.value === "air"); // default
+      });
+      document.getElementById('result').innerHTML = '';
+    }
+
+    document.getElementById('currencySelect').addEventListener('change', updateCurrencyUI);
+
+    // Save on change for all inputs
+    function allInputs() {
+      return [
+        document.getElementById('cost'),
+        document.getElementById('profit'),
+        document.getElementById('rateAED'),
+        document.getElementById('rateGBP'),
+        document.getElementById('rateUSD'),
+        document.getElementById('weight'),
+        document.getElementById('seaRate'),
+        document.getElementById('seaRateCurrency'),
+        document.getElementById('airRate'),
+        document.getElementById('airRateCurrency'),
+        ...document.querySelectorAll('input[name="shipping"]')
+      ];
+    }
+    allInputs().forEach(el => {
+      el.addEventListener('change', function() {
+        const curr = document.getElementById('currencySelect').value;
+        if (el.id === "cost" || el.id === "profit" || el.id === "weight" ||
+            el.id === "seaRate" || el.id === "seaRateCurrency" || el.id === "airRate" || el.id === "airRateCurrency") {
+          localStorage.setItem(currencyKey(el.id), el.value);
+        }
+        if (el.id === "rateAED" && curr === "uae") localStorage.setItem(currencyKey('rate'), el.value);
+        if (el.id === "rateGBP" && curr === "uk") localStorage.setItem(currencyKey('rate'), el.value);
+        if (el.id === "rateUSD" && curr === "usa") localStorage.setItem(currencyKey('rate'), el.value);
+        if (el.name === "shipping" && el.checked) {
+          localStorage.setItem(currencyKey('shipping'), el.value);
+        }
+      });
+    });
+
+    // Helper: get exchange rate for current currency
+    function getExchangeRate() {
+      const curr = document.getElementById('currencySelect').value;
+      if (curr === "uae") return parseFloat(document.getElementById('rateAED').value);
+      if (curr === "uk") return parseFloat(document.getElementById('rateGBP').value);
+      if (curr === "usa") return parseFloat(document.getElementById('rateUSD').value);
+      return 1;
+    }
+    // Helper: currency label
+    function getCurrencyLabel() {
+      const curr = document.getElementById('currencySelect').value;
+      if (curr === "uae") return "AED";
+      if (curr === "uk") return "GBP";
+      if (curr === "usa") return "USD";
+      return "";
+    }
+
+    function formatPKR(value) {
+      return value.toLocaleString('en-PK', { style: 'currency', currency: 'PKR', minimumFractionDigits: 2 });
+    }
+
+    document.getElementById('calcForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const curr = document.getElementById('currencySelect').value;
+      const cost = parseFloat(document.getElementById('cost').value);
+      const profitMargin = parseFloat(document.getElementById('profit').value);
+      const rate = getExchangeRate();
+      const weightGrams = parseFloat(document.getElementById('weight').value);
+
+      const seaRate = parseFloat(document.getElementById('seaRate').value);
+      const seaRateCurrency = document.getElementById('seaRateCurrency').value;
+      const airRate = parseFloat(document.getElementById('airRate').value);
+      const airRateCurrency = document.getElementById('airRateCurrency').value;
+      const shippingType = document.querySelector('input[name="shipping"]:checked').value;
+
+      // Save to localStorage
+      localStorage.setItem(currencyKey('cost'), document.getElementById('cost').value);
+      localStorage.setItem(currencyKey('profit'), document.getElementById('profit').value);
+      localStorage.setItem(currencyKey('rate'), rate);
+      localStorage.setItem(currencyKey('weight'), document.getElementById('weight').value);
+      localStorage.setItem(currencyKey('seaRate'), document.getElementById('seaRate').value);
+      localStorage.setItem(currencyKey('seaRateCurrency'), seaRateCurrency);
+      localStorage.setItem(currencyKey('airRate'), document.getElementById('airRate').value);
+      localStorage.setItem(currencyKey('airRateCurrency'), airRateCurrency);
+      localStorage.setItem(currencyKey('shipping'), shippingType);
+
+      // Validation
+      if (
+        isNaN(cost) || isNaN(profitMargin) || isNaN(rate) ||
+        isNaN(weightGrams) || isNaN(seaRate) || isNaN(airRate) ||
+        cost < 0 || profitMargin < 0 || rate <= 0 ||
+        weightGrams < 0 || seaRate < 0 || airRate < 0
+      ) {
+        document.getElementById('result').textContent = "Please enter valid values.";
+        return;
+      }
+
+      // Convert item cost to PKR
+      const costPKR = cost * rate;
+      // Get selected shipping rate and convert to PKR
+      let shippingRatePerKg = 0;
+      let shippingRateInput = 0;
+      let shippingRateInputCurr = "PKR";
+      if (shippingType === "sea") {
+        shippingRateInput = seaRate;
+        shippingRateInputCurr = seaRateCurrency;
+      } else {
+        shippingRateInput = airRate;
+        shippingRateInputCurr = airRateCurrency;
+      }
+      // Convert shipping rate to PKR per kg
+      let shippingRatePerKgPKR = shippingRateInput;
+      if (shippingRateInputCurr !== "PKR") {
+        // Use correct exchange for the currency
+        let fx = 1;
+        if (shippingRateInputCurr === "AED" && curr === "uae") fx = rate;
+        else if (shippingRateInputCurr === "GBP" && curr === "uk") fx = rate;
+        else if (shippingRateInputCurr === "USD" && curr === "usa") fx = rate;
+        else if (shippingRateInputCurr === "AED") fx = parseFloat(localStorage.getItem("uae_rate")) || 1;
+        else if (shippingRateInputCurr === "GBP") fx = parseFloat(localStorage.getItem("uk_rate")) || 1;
+        else if (shippingRateInputCurr === "USD") fx = parseFloat(localStorage.getItem("usa_rate")) || 1;
+        shippingRatePerKgPKR = shippingRateInput * fx;
+      }
+      // Calculate shipping cost and final price (weight in grams, rate per kg)
+      const shippingRatePerGram = shippingRatePerKgPKR / 1000.0;
+      const shippingCost = weightGrams * shippingRatePerGram;
+      const costWithProfit = costPKR * (1 + profitMargin / 100);
+      const total = costWithProfit + shippingCost;
+
+      document.getElementById('result').innerHTML = `
+        <div class="final-price-box">
+          Total Price: ${formatPKR(total)}
+        </div>
+        (Cost with Profit: ${formatPKR(costWithProfit)} + Shipping: ${formatPKR(shippingCost)})<br>
+        <small>Item Cost: ${cost} ${getCurrencyLabel()} × rate = ${formatPKR(costPKR)}<br>
+        Shipping Rate: ${shippingRateInput} ${shippingRateInputCurr}/kg × rate = ${formatPKR(shippingRatePerKgPKR)}/kg<br>
+        Weight: ${weightGrams} grams</small>
+      `;
+    });
+
+    // On load, set UI and restore inputs for default currency
+    window.addEventListener('DOMContentLoaded', function() {
+      updateCurrencyUI();
+    });
+  </script>
+</body>
+</html>
